# bikecounter

./: .gitignore  .gitmodules  README.md  bikecounter.html  bikecounterDays.html  heatpump.html  index-bikecounter-days.js  index-bikecounter.js  index-heatpump.js  index-kellerV21.js  index.html  index.js  jsconfig.json  json2csv.js  kellerV21.html  main.d5db22f878b1569c.js  package-lock.json  package.json  runtime.78d5d594b6c9c9fe.js  styles.css
.github/workflows/: unitTest.yml
arduino/: DataPackage.xlsx  MotionSensorLora.ino  loraLowPowerAndDallas18B20.ino
arduino/BikeCounterLight/: BikeCounterLight.ino
arduino/BikeCounterPro/: BikeCounterPro.ino
arduino/loraLowPowerAndDHT22/: loraLowPowerAndDHT22.ino
arduino/testSkatches/BikeCounterProDS3231/: BikeCounterProDS3231.ino
arduino/testSkatches/BikeCounterProRTCpcf8523/: BikeCounterProRTCpcf8523.ino
arduino/testSkatches/TPL5111/TPL5111/: TPL5111.ino
arduino/testSkatches/i2c_scanner/: i2c_scanner.ino
assets/: cloudFunctionHealthData.js  cloudFunctionSummaryAllDevices.js  cloudFunctionSummaryDevice.js
docs/: 3rdpartylicenses.txt  index.html  main.72fb7410271f9005.js  main.7c200b40d2a575d5.js  main.7d3a3eff16267aff.js  polyfills.d250f0145264f72f.js  styles.9052d021e8503016.css
docs/assets/: cloudFunctionStoreDeviceData.js  deviceData.json
hardware/: DataPackage.xlsx  Label.docx  sketch.json
hardware/BikeCounterLight/: BikeCounterLight.ino  arduino_secrets.h.example
hardware/BikeCounterPro/: BikeCounterPro.ino  CMakeLists.txt  RTClib_mock.cpp  RTClib_mock.h  dataPackage.cpp  dataPackage.hpp  payloadFormatter_uplink.js  runTestsLocal.sh  timerSchedule.cpp  timerSchedule.hpp  unitTests.cc  versionConfig.h
hardware/BikeCounterPro/flash/writeConfigToFlash/: writeConfigToFlash.ino
hardware/BikeCounterPro/src/dataPackage/: DataPackage.xlsx  dataPackage.cpp  dataPackage.hpp  payloadFormatter_downlink.js  payloadFormatter_uplink.js  storeBikeCounterProTimeSync.js
hardware/BikeCounterPro/src/timerSchedule/: CMakeLists.txt  runTestsLocal.sh  timerSchedule.cpp  timerSchedule.hpp  unitTests.cc
hardware/BikeCounterPro/src/timerSchedule/mock/: CMakeLists.txt  RTClib_mock.cpp  RTClib_mock.h
hardware/PCB/: BOM_v0.1_r1.xlsx
hardware/PCB/BikeCounter/: BikeCounter-cache.lib  BikeCounter.kicad_pcb  BikeCounter.kicad_pcb-bak  BikeCounter.sch  BikeCounter.sch-bak  fp-lib-table
hardware/PCB/CAD_files/: BikeCounter.prt  BikeCounter_PowerLayer.prt
hardware/PCB/GraphicsLib/: ZueriTrailsLogo_small.kicad_mod
hardware/PCB/LogicLayer/BikeCounter/: BikeCounter-cache.lib  BikeCounter-rescue.kicad_sym  BikeCounter.kicad_pcb  BikeCounter.kicad_pcb-bak  BikeCounter.kicad_prl  BikeCounter.kicad_pro  BikeCounter.kicad_sch  BikeCounter.pro  BikeCounter.sch  BikeCounter.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
hardware/PCB/PowerLayer/PowerLayer/: PowerLayer-cache.lib  PowerLayer-rescue.kicad_sym  PowerLayer.kicad_pcb  PowerLayer.kicad_pcb-bak  PowerLayer.kicad_pro  PowerLayer.kicad_sch  PowerLayer.pro  PowerLayer.sch  PowerLayer.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
hardware/PCB/SingleBoard/: BOM_v0.2.xlsx  BikeCounter_SingleBoard.xlsx
hardware/PCB/SingleBoard/BikeCounter_SingleBoard/: BikeCounter_SingleBoard.kicad_pcb  BikeCounter_SingleBoard.kicad_pro  BikeCounter_SingleBoard.kicad_sch
hardware/testSkatches/BatteryTest/: BatteryTest.ino
hardware/testSkatches/BikeCounterProDS3231/: BikeCounterProDS3231.ino
hardware/testSkatches/BikeCounterProHum/: BikeCounterProHum.ino
hardware/testSkatches/BikeCounterProRTCpcf8523/: BikeCounterProRTCpcf8523.ino
hardware/testSkatches/DS3231/DS3231_alarm/: DS3231_alarm.ino
hardware/testSkatches/RTC_Test/: RTC_Test.ino
hardware/testSkatches/SleepTest/SleepTimerTest/: SleepTimerTest.ino
hardware/testSkatches/pcf8523Countdown/: pcf8523Countdown.ino
sampleData/: ajaxDataForDatatables.json  outputBikecounterCloudFunction.json  parseSampleData.js  ttnV3DeviceUploadData.json
software/BikeCounterLight/: BikeCounterLight.ino
software/BikeCounterNext/: .cproject  .mxproject  .project  BikeCounterNext.ioc  BikeCounterNext.launch  STM32WL55JCIX_FLASH.ld
software/BikeCounterNext/Core/Inc/: adc.h  adc_if.h  flash_if.h  (+14 more)
software/BikeCounterPro/: BikeCounterPro.ino  config.h  runTestsLocal.sh  versionConfig.h
software/BikeCounterPro/src/timerSchedule/: CMakeLists.txt  date.h  runTestsLocal.sh  timerSchedule.cpp  timerSchedule.hpp  unitTests.cc
software/GoogleCLoud/checkHealthData/: index.js  package.json
software/GoogleCLoud/getDeviceHealthData/: index.js  package.json
software/GoogleCLoud/getDeviceSummaryPro/: index.js  package.json
software/GoogleCLoud/getDevicesSummaryPro/: index.js
software/GoogleCLoud/printDailyGraphData/: index.js  package.json
software/GoogleCLoud/printDailyGraphDataChartsjs/: index.js  package.json
software/GoogleCLoud/printGraph/: .runtimeconfig.json  index.js  package-lock.json  package.json  test.html  test.js
software/GoogleCLoud/storeBikeCounterData/: index.js  package.json
software/GoogleCLoud/storeBikeCounterPro/: index.js
software/GoogleCLoud/storeBikeCounterProTimeSync/: downlinkRequestExample.js  index.js
software/GoogleCLoud/trailtrafficlight/: index.js  package.json
software/TTN/: payloadFormatter_downlink.js  payloadFormatter_uplink.js
uploadData/: index.js  package-lock.json  sampleDataTTN-HTTP-Integration.json
(+96 files in other folders)
